// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderView should catch and emit rendering error thrown from error view 1`] = `
<DocumentFragment>
  <div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`renderView should cause redirection to the first match view if none was matched 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should match views with more params first 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        baz
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should pass props to view container 1`] = `
<DocumentFragment>
  <div>
    <div
      class="foo"
    >
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render class component registered without import 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render functional component registered without import 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderView should render matched view 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        bar
      </div>
    </div>
  </div>
</DocumentFragment>
`;
